fix alignment issues.

--- a/src/Admin.css
+++ b/src/Admin.css
@@ -23,7 +23,7 @@
   content: 'Restricted Access';
   position: absolute;
   bottom: 1rem;
-  right: -2rem;
+  right: 0.5rem;
   text-transform: uppercase;
   letter-spacing: 0.25em;
   font-size: 0.8rem;
@@ -51,6 +51,7 @@
   justify-content: center;
   flex: 1;
   width: 100%;
+  padding: 0;
 }
 
 .admin-access {
